2005-11-05  Yves Combe  <yves@ycombe.net>

	add gcompris_play_ogg_cb function, to get called when sound is finished. Yet a double free in melody.

	* src/boards/click_on_letter.c: (repeat), (config_stop),
	(sound_played):
	* src/boards/py-mod-sound.c: (pyGcomprisSoundCallback),
	(py_gcompris_play_ogg_cb):
	* src/boards/python/melody.py:
	* src/gcompris/gcompris-marshal.list:
	* src/gcompris/soundutil.c: (initSound), (thread_play_ogg),
	(gcompris_play_ogg_cb), (gcompris_sound_callback),
	(gcompris_sound_instance_init),
	(default_sound_played_signal_handler), (gcompris_sound_class_init),
	(gcompris_sound_get_type):
	* src/gcompris/soundutil.h:

2005-11-05  Bruno coudoin  <bruno.coudoin@free.fr>

	Completed the mosaic activity.
	
	* boards/boardicons/guessnumber.png:
	* boards/boardicons/mosaic.png:
	* boards/images/mosaic_bg.png:
	* boards/mosaic.xml.in:
	* configure.in:
	* src/boards/python/mosaic.py:
	* src/gcompris/gcompris.c: (gcompris_exit): Do not call xrandr if our pointer it's no more there. Strange I hot this case.

2005-11-04  Yves Combe  <yves@ycombe.net>

	Fix signal name presentation in gcompris_terminate.
	Suppress gnome_canvas_update_now in menu (cause of segfault in fullscreen mode).

	* src/boards/menu.c: (menu_start):
	* src/gcompris/gcompris.c: (gcompris_terminate):

2005-11-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- fixed audio file detection to not accept a directory as a valid
	  input.
	- fixed bad named audio files in geography.

	* boards/doubleentry/Makefile.am:
	* boards/geography/Makefile.am:
	* boards/geography/board1_0.xml.in:
	* boards/sounds/fr/geography/europa.ogg: renamed
	* boards/sounds/fr/geography/europe.ogg:
	* boards/sounds/fr/geography/gcompris_geography_fr.assetml.in:
	* boards/sounds/pt/geography/europa.ogg: renamed
	* boards/sounds/pt/geography/europe.ogg:
	* boards/sounds/pt/geography/gcompris_geography_pt.assetml.in:
	* src/gcompris/gameutil.c: (gcompris_find_absolute_filename):